# prompt-library

./: .gitignore  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  install.sh  prompt-library  pyproject.toml  requirements-dev.txt  requirements.txt  setup-hotkey.sh
.github/workflows/: ci.yml
examples/: brainstorm ideas.prompt  explain like a child.prompt  extract action items.prompt  fix grammar.prompt  review code.prompt  rewrite professionally.prompt  summarize text.prompt  translate to english.prompt  write commit message.prompt
packaging/: build-deb.sh
prompt_library/: __init__.py  __main__.py  app.py  config.py  hotkey.py
tests/: conftest.py  test_app.py  test_config.py  test_grid.py  test_scrim.py
