[project]
name = "prompt-library"
version = "0.1.0"
description = "Tray app to copy prompts to the clipboard"
requires-python = ">=3.10"
dependencies = ["PySide6-Essentials>=6.6"]

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
