[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-library"
version = "0.1.0"
description = "A GNOME tray app to copy reusable prompts to the clipboard with a click or a hotkey"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Federico De Malmayne Duppa", email = "fduppa@gmail.com" }]
keywords = ["prompts", "clipboard", "tray", "gnome", "wayland", "launcher", "pyside6"]
classifiers = [
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]
dependencies = ["PySide6-Essentials>=6.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-qt>=4.4", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/federico-duppa/prompt-library"
Repository = "https://github.com/federico-duppa/prompt-library"
Issues = "https://github.com/federico-duppa/prompt-library/issues"

[project.scripts]
prompt-library = "prompt_library.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["prompt_library"]

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
